Add design in the rest of screens of the app, add linecode to permit the insecure conecction traffic htpp for the consume of api, add url for the retrofitinstance, change the design of the topbar of the principal menu, change gradient of the profile screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HotelPlayaParadise"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.HotelPlayaParadise">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,5 +27,4 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
